# google-ads-mcp

./: pyproject.toml
ads_mcp/: server.py
ads_mcp/tools/: mutate.py
