[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-ads-mcp"
version = "0.1.0"
description = "MCP Server for Google Ads with read and write support. Fork of googleads/google-ads-mcp."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "google-ads>=25.1.0",
    "mcp>=1.0.0",
]

[project.scripts]
google-ads-mcp = "ads_mcp.server:run_server"
google-ads-mcp-update-gaql = "ads_mcp.update_references:main"

[tool.setuptools.packages.find]
include = ["ads_mcp*"]

[tool.setuptools.package-data]
ads_mcp = ["*.txt"]
